src/test/resources/de/cd4analysis/cocos/invalid/D00XX.cd
package de.cd4analysis.cocos;

classdiagram D00XX {
  class DAO;
  class Factory;
}